--- a/ERPWeb/Views/ControlPanel/CreateAppUser.cshtml
+++ b/ERPWeb/Views/ControlPanel/CreateAppUser.cshtml
@@ -33,7 +33,7 @@
                         <input type="hidden" name="Id" id="hdfUserId" value="@ViewBag.Id" />
                         <div class="form-row">
                             <div class="form-group col-md-3">
-                                <input type="text" placeholder="Employee Id" id="txtEmployeeId" class="form-control form-control-sm" />
+                                <input type="text" placeholder="Employee Id" id="txtEmployeeId" class="form-control form-control-sm" autofocus="autofocus" />
                                 <span class="error hide required-employeeId font-weight-bold">Input EmployeeId!</span>
                                 <span class="error hide duplicate-employeeId font-weight-bold">Already EmployeeId Exist!</span>
                             </div>
