--- a/ERPWeb/Views/ControlPanel/_GetBranch.cshtml
+++ b/ERPWeb/Views/ControlPanel/_GetBranch.cshtml
@@ -52,7 +52,7 @@
                         <td class="text-center text-sm">@br.UpdateUser</td>
 
                         <td class="text-center">
-                            <a href="#" class=" das-btn data-edit-item" data-edit-item="@br.BranchId"><i class="fa fa-pen"></i> Edit</a>
+                            <a href="#" class=" das-btn data-edit-item" data-edit-item="@br.BranchId"><i class="fa fa-pen"></i></a>
                         </td>
                     </tr>
                 }
