--- a/ERPWeb/Views/ControlPanel/_GetMainmenu.cshtml
+++ b/ERPWeb/Views/ControlPanel/_GetMainmenu.cshtml
@@ -5,7 +5,7 @@
 
 <div class="row">
     <div class="col-md-12">
-        <table class="table table-bordered table-sm table-striped table-responsive-lg table-valign-middle tblMainMenuData" id="tblMainMenuData">
+        <table class="table table-bordered table-sm table-striped table-responsive-lg tblMainMenuData" id="tblMainMenuData">
             <thead class="btn-dark">
                 <tr class="text-center">
                     <th>#SL</th>
@@ -31,7 +31,7 @@
                         <td class="text-center text-sm">@mainmenu.EntryUser</td>
                         <td class="text-center text-sm">@mainmenu.UpdateUser</td>
                         <td class="text-center">
-                            <a href="#" class="btn btn-warning btn-sm data-mainmenu-item" data-mainmenu-item="@mainmenu.MMId"><i class="fa fa-pen"></i> Edit</a>
+                            <a href="#" class="das-btn data-mainmenu-item" data-mainmenu-item="@mainmenu.MMId"><i class="fa fa-pen"></i></a>
                         </td>
                     </tr>
                 }
