--- a/ERPWeb/Views/ControlPanel/_GetModules.cshtml
+++ b/ERPWeb/Views/ControlPanel/_GetModules.cshtml
@@ -32,7 +32,7 @@
                         <td class="text-center text-sm">@module.EntryUser</td>
                         <td class="text-center text-sm">@module.UpdateUser</td>
                         <td class="text-center">
-                            <a href="#" class="das-btn data-module-item" data-module-item="@module.MId"><i class="fa fa-pen"></i> Edit</a>
+                            <a href="#" class="das-btn data-module-item" data-module-item="@module.MId"><i class="fa fa-pen"></i></a>
                         </td>
                     </tr>
                 }
