--- a/ERPWeb/Views/ControlPanel/_GetSubmenu.cshtml
+++ b/ERPWeb/Views/ControlPanel/_GetSubmenu.cshtml
@@ -7,7 +7,7 @@
 
 <div class="row">
     <div class="col-md-12" style="overflow-y:scroll">
-        <table class="table table-bordered table-sm table-striped table-responsive-lg table-valign-middle tblSubMenuData" id="tblSubMenuData">
+        <table class="table table-bordered table-sm table-striped table-responsive-lg tblSubMenuData" id="tblSubMenuData">
             <thead class="btn-dark">
                 <tr class="text-center">
                     <th>#SL</th>
@@ -55,7 +55,7 @@
                         <td class="text-center text-sm">@sub.UpdateUser</td>
 
                         <td class="text-center">
-                            <a href="#" class="btn btn-warning btn-sm data-submenu-item" data-submenu-item="@sub.SubMenuId"><i class="fa fa-pen"></i> Edit</a>
+                            <a href="#" class="das-btn data-submenu-item" data-submenu-item="@sub.SubMenuId"><i class="fa fa-pen"></i></a>
                         </td>
                     </tr>
                 }
