--- a/ERPWeb/Views/AgroConfiguration/CreateFinishGoodRecipe.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/CreateFinishGoodRecipe.cshtml
@@ -4,132 +4,138 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+
 <div class="row text-sm" style="margin-top:-25px">
     <div class="col-md-12">
-        <div class="card card-navy shadow">
-            <div class="card-header">
-                <div class="row">
-                    <div class="col-md-3">
-                        <a href="/AgroConfiguration/GetFinishGoodRecipeList" class="float-left btn btn-sm btn-outline-primary" title="Go To List">
-                            <i class="fas fa-arrow-alt-circle-left"></i>
-                        </a>
-                    </div>
-                    <div class="col-md-6">
-                        <h5 class="text-center text-bold">Create Finish Good Recipe</h5>
-                    </div>
-                    <div class="col-md-3">
-                        <button type="submit" id="btnSubmit" class="btn btn-sm btn-success float-right">
-                            <i class="fas fa-paper-plane"></i> Save
-                        </button>
-                    </div>
-                </div>
-            </div>
-            <div class="card-body">
-                <div class="row">
-                    <div class="col-md-7" style="border-right:2px solid #efefef">
-                        <h5 style="border-bottom:2px solid #f6eaaa">
-                            Target Product
-                        </h5>
-                        <div class="row">
-                            <div class="col-md-4">
-                                <label for="ddlProductName" class="col-form-label">
-                                    Product Name<span style="color:red">*</span>
-                                </label>
-                                @Html.DropDownList("ddlProductName", (IEnumerable<SelectListItem>)ViewBag.ProductName, "--Select ProductName--", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger", autofocus = "autofocus" })
-                                <span class="error hide req-ProductName font-weight-bold">Product Name is required!</span>
-                            </div>
-                            <div class="col-md-3">
-                                <label for="txtQty" class="col-form-label">ProductQty <span style="color:red">*</span><span id="unitName" class="font-weight-bold mt-1" style="color:darkblue"> </span></label>
-                                <input type="number" placeholder="Qty" name="quantity" id="txtProductQty" class="form-control form-control-sm" />
-                                <span class="error hide req-src-Productqty text-bold">ProductQty is required!</span>
-                            </div>
-                            <div class="col-md-3">
-                                <label for="ddlUnit" class="col-form-label">Unit Name</label>
-                                @Html.DropDownList("ddlUnit1", (IEnumerable<SelectListItem>)ViewBag.ddlUnit, "--Select Unit--", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
 
-                                <span class="error hide required-UnitName font-weight-bold">Unit Name is Required</span>
+        <div class="row" style="margin-top:0px">
+            <div class="col-md-12">
+                <div class="card" style="background-color:#001f3f">
+                    <div class="px-2 py-1">
+                        <div class="row align-items-center">
+                            <div class="col-md-3">
+                                <a href="/AgroConfiguration/GetFinishGoodRecipeList" class="float-left emnDrop-btn" title="Go To List">
+                                    <i class="fas fa-arrow-alt-circle-left"></i>
+                                </a>
                             </div>
+                            <div class="col-md-6 text-center">
+                                <h6 class="text-center text-white text-bold">Create Finish Good Recipe</h6>
+                            </div>
+
                             <div class="col-md-2">
-                                <label for="ddlStatus" class="col-form-label">Status</label>
-                                <select class="form-control form-control-sm" id="ddlStatus">
-                                    <option value="Active">Active</option>
-                                    <option value="InActive">InActive</option>
-                                </select>
                             </div>
-                            @*<div class="col-md-4">
-                                    <label class="col-form-label" for="model">Product Unit</label>
-                                    <input type="text" id="txtProductunit" name="unit" class="form-control form-control-sm">
-                                </div>*@
+                            <div class="col-md-1" style="margin-top:0px;">
+
+                                <button type="submit" id="btnSubmit" class="emnsave-btn">
+                                    <i class="fas fa-paper-plane"></i> Save
+                                </button>
+
+                            </div>
                         </div>
-
                     </div>
-                    <div class="col-md-5">
-                        <h5 style="border-bottom:2px solid #f87878">Source Raw Material</h5>
-                        <div class="row">
-                            <div class="col-md-5">
-                                <label for="ddlRawMaterialName" class="col-form-label">Raw Material<span style="color:red">*</span></label>
-                                @Html.DropDownList("ddlRawMaterialName", (IEnumerable<SelectListItem>)ViewBag.ddlRawMaterialName, "--Select RawMaterial Name--", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger", autofocus = "autofocus" })
-                                <span class="error hide req-src-RawMaterialName font-weight-bold">RawMaterial Name is required !</span>
-
-                            </div>
-                            <div class="col-md-3">
-                                <label for="txtRawMaterialQty" class="col-form-label">RM Qty <span id="unitName" class="font-weight-bold mt-1" style="color:darkblue"> </span></label>
-                                <input type="text" placeholder="Qty" name="quantity" id="txtRawMaterialQty" class="form-control form-control-sm" />
-                                <span class="error hide req-src-RawMaterialqty text-bold">RawMaterial Qty is required!</span>
-                            </div>
-
-                            <div class="col-md-3">
-                                <label for="ddlUnitName" class="col-form-label">UnitName</label>
-                                <input type="text" id="ddlUnitName" name="ddlUnitName" class="form-control form-control-sm" readonly />
-                            </div>
-                            <div class="col-md-1">
-                                <label for="" class="col-form-label font-weight-bold" style="visibility:hidden">Add</label>
-                                <div class="clearfix">
-                                    <button type="submit" class="btn btn-sm float-right btn-outline-success" id="btnAddToList" title="Add"><i class="fas fa-plus"></i></button>
-                                </div>
-                            </div>
-                            <div class="hide">
-                                <label for="ddlUnitID">UnitID</label>
-                                <input type="text" id="ddlUnitID" name="ddlUnitID" class="form-control form-control-sm" readonly />
-                            </div>
-
-
-                        </div>
-                        
-
-                    </div>
-
-                </div>
-            </div>
-            <div class="row mt-2">
-                <div class="col-md-12">
-                    @Html.AntiForgeryToken()
-                    <table class="table table-head-fixed text-nowrap table-bordered table-sm table-striped table-responsive-lg" id="tblList">
-                        <thead>
-                            <tr>
-                                <th colspan="11" class="text-center">
-                                    <span class="error hide no-items">Please load the table first.</span>
-                                    @*<button type="submit" id="btnSubmit" class="btn btn-sm btn-success float-right">
-                                        <i class="fas fa-paper-plane"></i> Save
-                                    </button>*@
-                                </th>
-                            </tr>
-                            <tr class="text-center btn-dark">
-                                <th style="width:8%">#SL</th>
-                                <th style="width:40%">RawMaterial Name</th>
-                                <th style="width:10%">RawMaterial Qty.</th>
-                                <th style="width:10%">RawMaterial Unit</th>
-                                <th style="width:12%">Action</th>
-                                <th class="hide RawMaterialId"></th>
-                                <th class="hide UnitId"></th>
-
-                            </tr>
-                        </thead>
-                        <tbody></tbody>
-                    </table>
                 </div>
             </div>
         </div>
+
+        <div class="card-body">
+            <div class="row" style="margin-top:-25px">
+                <div class="col-md-7" style="border-right:2px solid #efefef">
+                    <h6 style="border-bottom:2px solid #f6eaaa">
+                        Target Product
+                    </h6>
+                    <div class="row">
+                        <div class="col-md-4 pl-0">
+                            <label for="ddlProductName" class="col-form-label p-0">
+                                Product Name<span style="color:red">*</span>
+                            </label>
+                            @Html.DropDownList("ddlProductName", (IEnumerable<SelectListItem>)ViewBag.ProductName, "--Select ProductName--", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger", autofocus = "autofocus" })
+                            <span class="error hide req-ProductName font-weight-bold">Product Name is required!</span>
+                        </div>
+                        <div class="col-md-3 pl-0">
+                            <label for="txtQty" class="col-form-label p-0">ProductQty <span style="color:red">*</span><span id="unitName" class="font-weight-bold mt-1" style="color:darkblue"> </span></label>
+                            <input type="number" placeholder="Qty" name="quantity" id="txtProductQty" class="form-control form-control-sm" />
+                            <span class="error hide req-src-Productqty text-bold">ProductQty is required!</span>
+                        </div>
+                        <div class="col-md-3 pl-0">
+                            <label for="ddlUnit" class="col-form-label p-0">Unit Name</label>
+                            @Html.DropDownList("ddlUnit1", (IEnumerable<SelectListItem>)ViewBag.ddlUnit, "--Select Unit--", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
+
+                            <span class="error hide required-UnitName font-weight-bold">Unit Name is Required</span>
+                        </div>
+                        <div class="col-md-2 pl-0">
+                            <label for="ddlStatus" class="col-form-label p-0">Status</label>
+                            <select class="form-control form-control-sm" id="ddlStatus">
+                                <option value="Active">Active</option>
+                                <option value="InActive">InActive</option>
+                            </select>
+                        </div>
+                        @*<div class="col-md-4">
+                            <label class="col-form-label" for="model">Product Unit</label>
+                            <input type="text" id="txtProductunit" name="unit" class="form-control form-control-sm">
+                        </div>*@
+                    </div>
+
+                </div>
+                <div class="col-md-5">
+                    <h6 style="border-bottom:2px solid #f87878">Source Raw Material</h6>
+                    <div class="row">
+                        <div class="col-md-5">
+                            <label for="ddlRawMaterialName" class="col-form-label p-0">Raw Material<span style="color:red">*</span></label>
+                            @Html.DropDownList("ddlRawMaterialName", (IEnumerable<SelectListItem>)ViewBag.ddlRawMaterialName, "--Select RawMaterial Name--", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger", autofocus = "autofocus" })
+                            <span class="error hide req-src-RawMaterialName font-weight-bold">RawMaterial Name is required !</span>
+
+                        </div>
+                        <div class="col-md-3 pl-0">
+                            <label for="txtRawMaterialQty" class="col-form-label p-0">RM Qty <span id="unitName" class="font-weight-bold mt-1" style="color:darkblue"> </span></label>
+                            <input type="text" placeholder="Qty" name="quantity" id="txtRawMaterialQty" class="form-control form-control-sm" />
+                            <span class="error hide req-src-RawMaterialqty text-bold">RawMaterial Qty is required!</span>
+                        </div>
+
+                        <div class="col-md-3 pl-0">
+                            <label for="ddlUnitName" class="col-form-label p-0">UnitName</label>
+                            <input type="text" id="ddlUnitName" name="ddlUnitName" class="form-control form-control-sm" readonly />
+                        </div>
+
+                        <div class="col-md-1 pl-0">
+                            <div>
+                                <label for="" class="col-form-label font-weight-bold p-0" style="visibility:hidden">Add</label>
+                                <button type="submit" class="float-left float-md-start text-bold" id="btnAddToList" title="Save"><i class="fas fa-plus"></i></button>
+                            </div>
+                        </div>
+                        <div class="hide">
+                            <label for="ddlUnitID">UnitID</label>
+                            <input type="text" id="ddlUnitID" name="ddlUnitID" class="form-control form-control-sm" readonly />
+                        </div>
+
+
+                    </div>
+
+
+                </div>
+
+            </div>
+        </div>
+        <div class="row" style="margin-top:-15px">
+            <div class="col-md-12">
+                @Html.AntiForgeryToken()
+                <table class="table table-head-fixed text-nowrap table-bordered table-sm table-striped table-responsive-lg" id="tblList">
+                    <thead>
+                        <tr class="text-center" >
+                            <th style="width:8%; background-color:black; color:white">#SL</th>
+                            <th style="width: 40%; background-color: black; color: white">RawMaterial Name</th>
+                            <th style="width: 10%; background-color: black; color: white">RawMaterial Qty.</th>
+                            <th style="width: 10%; background-color: black; color: white">RawMaterial Unit</th>
+                            <th style="width: 12%; background-color: black; color: white">Action</th>
+                            <th class="hide RawMaterialId"></th>
+                            <th class="hide UnitId"></th>
+
+                        </tr>
+                    </thead>
+                    <tbody></tbody>
+                </table>
+            </div>
+        </div>
+
     </div>
 </div>
 
