--- a/ERPWeb/Views/AgroConfiguration/ProductionPriceCreate.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/ProductionPriceCreate.cshtml
@@ -1,36 +1,10 @@
 ﻿
 @{
-    ViewBag.Title = "SalesReturnAdjustCreate";
+    ViewBag.Title = "ProductionCost";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<style>
-    .button-33 {
-        background-color: #c2fbd7;
-        border-radius: 100px;
-        box-shadow: rgba(44, 187, 99, .2) 0 -25px 18px -14px inset,rgba(44, 187, 99, .15) 0 1px 2px,rgba(44, 187, 99, .15) 0 2px 4px,rgba(44, 187, 99, .15) 0 4px 8px,rgba(44, 187, 99, .15) 0 8px 16px,rgba(44, 187, 99, .15) 0 16px 32px;
-        color: green;
-        cursor: pointer;
-        display: inline-block;
-        font-family: CerebriSans-Regular,-apple-system,system-ui,Roboto,sans-serif;
-        padding: 7px 20px;
-        text-align: center;
-        text-decoration: none;
-        transition: all 250ms;
-        border: 0;
-        font-size: 16px;
-        user-select: none;
-        -webkit-user-select: none;
-        touch-action: manipulation;
-    }
 
-        .button-33:hover {
-            box-shadow: rgba(44,187,99,.35) 0 -25px 18px -14px inset,rgba(44,187,99,.25) 0 1px 2px,rgba(44,187,99,.25) 0 2px 4px,rgba(44,187,99,.25) 0 4px 8px,rgba(44,187,99,.25) 0 8px 16px,rgba(44,187,99,.25) 0 16px 32px;
-            transform: scale(1.05) rotate(-1deg);
-        }
-
-
-</style>
 
 <div class="row" style="margin-top:-10px">
 
@@ -39,78 +13,24 @@
 
         <div class="row" style="margin-top:-15px">
             <div class="col-md-12">
-                <div class="card card-navy">
-
-                    <div class="card-header" style="text-align: center;">
+                <div class="card mb-0" style="background-color:#001f3f">
+                    <div class="px-2 py-1">
 
                         <div class="row">
                             <div class="col-md-3">
 
-                                <a href="/AgroConfiguration/ProductionPriceList" class="float-left btn btn-sm btn-outline-primary" title="Go To List">
+                                <a href="/AgroConfiguration/ProductionPriceList" class="float-left emnDrop-btn" title="Go To List">
                                     <i class="fas fa-arrow-alt-circle-left"></i>
                                 </a>
                             </div>
-                            <div class="col-md-6">
-                                <h5 class="text-center text-bold">
+                            <div class="col-md-6 text-center">
+                                <h7 class="text-bold text-white">
                                     ProductWise Production Cost
-                                </h5>
+                                </h7>
                             </div>
                             <div class="col-md-3">
-                                @*<button class="btn btn-success btn-sm btn float-right" id="saveButton">SAVE <i class="fas fa-paper-plane"></i></button>*@
-                                <button class="btn-sm btn float-right button-33" id="saveButton" role="button" >Save <i class="fas fa-paper-plane"></i></button>
+                                <button type="submit" class="emnsave-btn" id="saveButton" title="Save"><i class="fas fa-paper-plane"></i>Save</button>
                             </div>
-                        </div>
-
-                    </div>
-                </div>
-            </div>
-        </div>
-
-
-        <div class="row">
-            <div class="col-md-12" style="margin-top:-15px">
-                <div class="card card-gray-dark ">
-
-                    <div class="card-header text-sm ">
-                        <div class="row justify-content-center">
-                            <div class="col-md-2">
-                                <label for="ddlProductName" class="col-form-label text-white">
-                                    Product Name<span style="color:red">*</span>
-                                </label>
-                                @Html.DropDownList("ddlProductName", (IEnumerable<SelectListItem>)ViewBag.ddlProductName, "--ProductName--", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger",autofocus="autofocus" })
-                                <span class="error hide req-ProductName font-weight-bold">Product Name is required!</span>
-                            </div>
-                            <div class="col-md-2">
-                                <label for="ddlQtyUnit" class="col-form-label text-white">
-                                    Receipe Unit Qty<span style="color:red">*</span>
-                                </label>
-                                @Html.DropDownList("ddlQtyUnit", (IEnumerable<SelectListItem>)ViewBag.ddlQtyUnit, "--UnitQty--", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
-                                <span class="error hide req-QtyUnit font-weight-bold">Unit Qty is required!</span>
-                            </div>
-                            <div class="col-md-2">
-                                <label class="col-form-label text-white" for="ddlRMtotalprice">RM TotalPRice</label>
-                                <input type="number" id="ddlRMtotalprice" name="ddlRMtotalprice" class="form-control form-control-sm" readonly />
-                            </div>
-                            <div class="col-md-2">
-                                <label class="col-form-label text-white" for="ddlotherexpense">Other Expense Price<span style="color:red">*</span></label>
-                                <input type="number" id="ddlotherexpense" name="ddlotherexpense" class="form-control form-control-sm" />
-                            </div>
-
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-
-
-        </div>
-
-        <div class="row">
-            <div class="col-md-12" style="margin-top:-10px">
-                <div class="card">
-                    <div class="card-body">
-                        <div class="col-md-12" id="dataContainer">
-
                         </div>
                     </div>
                 </div>
@@ -118,9 +38,58 @@
         </div>
 
 
+                <div class="row">
+                    <div class="col-md-12" style="margin-top:1px">
+                        <div class="card card-gray-dark ">
+
+                            <div class="card-header text-sm py-1 px-0">
+                                <div class="row justify-content-center">
+                                    <div class="col-md-2">
+                                        <label for="ddlProductName" class="col-form-label text-white pr-0 pb-0 pt-0">
+                                            Product Name<span style="color:red">*</span>
+                                        </label>
+                                        @Html.DropDownList("ddlProductName", (IEnumerable<SelectListItem>)ViewBag.ddlProductName, "--ProductName--", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger", autofocus = "autofocus" })
+                                        <span class="error hide req-ProductName font-weight-bold">Product Name is required!</span>
+                                    </div>
+                                    <div class="col-md-2">
+                                        <label for="ddlQtyUnit" class="col-form-label text-white pr-0 pb-0 pt-0">
+                                            Receipe Unit Qty<span style="color:red">*</span>
+                                        </label>
+                                        @Html.DropDownList("ddlQtyUnit", (IEnumerable<SelectListItem>)ViewBag.ddlQtyUnit, "--UnitQty--", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
+                                        <span class="error hide req-QtyUnit font-weight-bold">Unit Qty is required!</span>
+                                    </div>
+                                    <div class="col-md-2">
+                                        <label class="col-form-label text-white pr-0 pb-0 pt-0" for="ddlRMtotalprice">RM TotalPRice</label>
+                                        <input type="number" id="ddlRMtotalprice" name="ddlRMtotalprice" class="form-control form-control-sm" readonly />
+                                    </div>
+                                    <div class="col-md-2">
+                                        <label class="col-form-label text-white pb-0 pt-0" for="ddlotherexpense">Other Expense Price<span style="color:red">*</span></label>
+                                        <input type="number" id="ddlotherexpense" name="ddlotherexpense" class="form-control form-control-sm" />
+                                    </div>
+
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
 
 
-    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-12" style="margin-top:-15px">
+
+                                <div class="col-md-12 p-0" id="dataContainer">
+
+                                </div>
+
+                    </div>
+                </div>
+
+
+
+
+            </div>
 
 
 </div>
