--- a/ERPWeb/Views/AgroConfiguration/ProductionPriceList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/ProductionPriceList.cshtml
@@ -5,19 +5,19 @@
 }
 
 
-<div class="row" style="margin-top:-10px">
+<div class="row" style="margin-top:-23px">
     <div class="col-md-12">
 
 
-        <div class="row" style="margin-top:-12px">
+        <div class="row">
             <div class="col-md-12">
                 <div class="card" style="background-color:#001f3f">
                     <div class="px-2 py-1">
                         <div class="row">
                             <div class="col-md-3">
-                                <h5 class=" text-bold float-left text-white">
+                                <h7 class=" text-bold float-left text-white">
                                     Production Cost/PC
-                                </h5>
+                                </h7>
                             </div>
                             <div class="col-md-2">
 
@@ -30,7 +30,7 @@
                             </div>
 
                             <div class="col-md-3">
-                                <a href="/AgroConfiguration/ProductionPriceCreate" class="btn btn-outline-warning btn-sm float-lg-right" id="btnAddNew"><i class="fa fa-plus"></i>Get ProductionPrice</a>
+                                <a href="/AgroConfiguration/ProductionPriceCreate" class="das2-btn float-lg-right float-sm-right" id="btnAddNew"><i class="fa fa-plus"></i>Get ProductionPrice</a>
                             </div>
                         </div>
                     </div>
@@ -39,34 +39,13 @@
         </div>
 
 
-
-        @*<div class="row" style="margin-top:-15px">
+        <div class="row"style="margin-top:-17px">
             <div class="col-md-12">
-                <div class="card card-gray-dark">
-                    <div class="card-header">
-                        <div class="row justify-content-center">
-                            <div class="col-md-2">
-                                <h5 class="text-right">Search By</h5>
-                            </div>
-                            <div class="col-md-2">
 
-                                <input type="text" class="form-control form-control-sm" id="SearchAny" placeholder="search By invoice" />
-                            </div>
+                        <div class="col-md-12 p-0" id="dataContainer">
 
                         </div>
-                    </div>
-                </div>
-            </div>
-        </div>*@
-        <div class="row"style="margin-top:-3px">
-            <div class="col-md-12" style="margin-top:-10px">
-                <div class="card ">
-                    <div class="card-body"style="margin-top:-10px">
-                        <div class="col-md-12" id="dataContainer">
 
-                        </div>
-                    </div>
-                </div>
             </div>
         </div>
 
