--- a/ERPWeb/Views/AgroConfiguration/_GetAgroSalesProductList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetAgroSalesProductList.cshtml
@@ -7,7 +7,7 @@
 }
 
 
-<table class="table table-bordered table-sm table-striped table-responsive-lg text-sm" id="tblAgroSalesProductList">
+<table class="table table-bordered table-sm table-striped table-responsive-lg table-responsive-md table-responsive-sm text-sm" id="tblAgroSalesProductList">
     <thead class="btn-dark">
         <tr class="text-center text-bold">
             <th style="vertical-align:middle">#SL</th>
