--- a/ERPWeb/Views/AgroConfiguration/_GetFinishGoodProductionList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetFinishGoodProductionList.cshtml
@@ -6,8 +6,8 @@
     var SL = 0;
 }
 <div class="row">
-    <div class="col-md-12" style="overflow-y:scroll">
-        <table class="table table-bordered table-striped table-hover table-sm text-sm" id="tblFinishGoodProductList">
+    <div class="col-md-12">
+        <table class="table table-bordered table-sm table-striped table-responsive-lg table-responsive-md table-responsive-sm text-sm" id="tblFinishGoodProductList">
             <thead class="btn-dark">
                 <tr class="text-center">
                     <th style="vertical-align:middle">#SL</th>
@@ -33,7 +33,7 @@
                         <td class="text-center">@item.EntryDate.Value.ToString("dd-MMM-yyyy")</td>
                         <td class="text-center">
 
-                            <a href="#" class="btn btn-outline-secondary btn-sm data-detail-item-Product" title="View Detail" style="line-height:1" data-detail-item-Product="@item.FinishGoodProductionBatch">
+                            <a href="#" class="emndetails-btn data-detail-item-Product" title="View Detail" style="line-height:1" data-detail-item-Product="@item.FinishGoodProductionBatch">
                                 <i class="fa fa-eye"></i>
                             </a>
 
