--- a/ERPWeb/Views/AgroConfiguration/_GetFinishGoodRecipeList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetFinishGoodRecipeList.cshtml
@@ -8,7 +8,7 @@
     var privilege = (ERPBO.Common.UserPrivilege)ViewBag.UserPrivilege;
 }
 
-<table class="table table-bordered table-sm table-striped table-responsive-lg text-sm" id="tblFinishGoodRecipeList">
+<table class="table table-bordered table-sm table-striped table-responsive-lg table-responsive-md table-responsive-sm text-sm" id="tblFinishGoodRecipeList">
     <thead class="btn-dark">
         <tr class="text-center text-bold">
             <th style="vertical-align:middle">#SL</th>
@@ -35,19 +35,19 @@
                 <td class="text-center">
                     @*@if (privilege != null && privilege.Detail)
                     {*@
-                        <a href="#" class="btn btn-sm btn-outline-secondary data-item-detail" title="View Detail" data-item-detail="@item.FGRId" style="line-height:1">
+                        <a href="#" class="emndetails-btn data-item-detail" title="View Detail" data-item-detail="@item.FGRId" style="line-height:1">
                             <i class="fas fa-eye"></i>
                         </a>
                     @*}
                     @if (privilege != null && privilege.Edit)
                     {*@
-                        <a href="#" class="btn btn-sm btn-outline-warning data-item-edit" title="Edit" data-edit-item="@item.FGRId" style="line-height:1">
+                        <a href="#" class="dasedit-btn data-item-edit" title="Edit" data-edit-item="@item.FGRId" style="line-height:1">
                             <i class="fas fa-pen"></i>
                         </a>
                     @*}
                     @if (privilege != null && privilege.Delete)
                     {*@
-                        <a href="#" class="btn btn-sm btn-outline-danger data-item-del" title="Delete" data-del-item="@item.FGRId" style="line-height:1">
+                        <a href="#" class="emn-btn data-item-del" title="Delete" data-del-item="@item.FGRId" style="line-height:1">
                             <i class="fas fa-trash"></i>
                         </a>
                     @*}*@
