--- a/ERPWeb/Views/AgroConfiguration/_GetStockProductFinishGoodList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetStockProductFinishGoodList.cshtml
@@ -4,7 +4,7 @@
 }
 <div class="row">
     <div class="col-md-12">
-        <table class="table table-bordered table-striped table-hover">
+        <table class="table table-bordered table-sm table-striped table-responsive-lg table-responsive-md table-responsive-sm text-sm">
             <thead class="btn-dark">
                 <tr class="text-center">
                     <th>Sl</th>
